<resources>
    <string name="app_name">ShoeNotifications</string>
    <string name="terms_and_conditions_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. The customer thereby acknowledges that by completing the onboarding process, the company (hereby: ShoeNotifications) is entitled to come into the customer\'s house and take his/her/their shoes.</string>
    <string name="post_onboarding_msg">Stay tuned , more to come!</string>
    <string name="age_field_error_msg">Please enter a valid age (18+)!</string>
    <string name="math_field_incorrect_answer">Incorrect answer! Try again.</string>
    <string name="name_field_invalid_name">" must be alphabetic only and at least 3 letters!</string>
    <string name="shoe_notification_logo_description">shoe_notification_logo</string>
    <string name="math_question_prompt">So you want to be our customer. \nLet\'s see if you\'re up to the task!</string>
    <string name="math_question_prompt_land">So you want to be our customer. Let\'s see if you\'re up to the task!</string>
    <string name="welcome_msg_1">Welcome to ShoeNotifications!</string>
    <string name="welcome_msg_2">Let\'s get to know each other.</string>
    <string name="fab_start_onboarding_description">Start onboarding process</string>
    <string name="age_fragment_question">How old are you?</string>
    <string name="age_fragment_input_hint">Age</string>
    <string name="fab_age_done_description">Finish entering age</string>
    <string name="text_field_math_answer_hint">Solution</string>
    <string name="fab_math_done_description">Floating action button: math question done</string>
    <string name="name_fragment_text_view_msg">And last but not least, what\'s your name?</string>
    <string name="first_name_text_input_hint">First name</string>
    <string name="last_name_text_input_hint">Last name</string>
    <string name="fab_name_done_description">Floating action button: name done</string>
    <string name="terms_fragment_text_view_msg">Please read and accept our terms and conditions:</string>
    <string name="fab_agree_to_terms_description">Floating action button: agree to terms</string>
</resources>