<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".onboarding.hello.HelloFragment">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_msg_1"
        android:textStyle="bold"
        android:textSize="24sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome_msg_2"
        android:textStyle="bold"
        android:textSize="24sp"
        />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabStartOnboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="224dp"
        android:contentDescription="@string/fab_start_onboarding_description"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />


</LinearLayout>