<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.age.AgeFragment">

    <TextView
        android:id="@+id/textViewAgeQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:text="@string/age_fragment_question"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldAge"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAgeQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/age_fragment_input_hint"
        app:helperText="Required">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextInputAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:errorEnabled="true"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAgeDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textFieldAge"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:contentDescription="@string/fab_age_done_description" />

</androidx.constraintlayout.widget.ConstraintLayout>
